[gd_scene load_steps=6 format=3 uid="uid://xtqh8vg67enw"]

[ext_resource type="Script" uid="uid://djdfsufwh4uw6" path="res://scripts/GameScene.gd" id="1_4k4m3"]
[ext_resource type="Script" uid="uid://xber0aac4r3x" path="res://scripts/Player.gd" id="2_5k4m3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(20, 720)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 20.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_4k4m3")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(640, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("RectangleShape2D_1")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(640, 730)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource("RectangleShape2D_1")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-10, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_2")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(1290, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_2")

[node name="Players" type="Node2D" parent="."]

[node name="Player1" type="CharacterBody2D" parent="Players"]
position = Vector2(320, 360)
script = ExtResource("2_5k4m3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player1"]
shape = SubResource("CircleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="Players/Player1"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="Player2" type="CharacterBody2D" parent="Players"]
position = Vector2(960, 360)
script = ExtResource("2_5k4m3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player2"]
shape = SubResource("CircleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="Players/Player2"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0, 0, 1, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBars" type="Node2D" parent="UI"]

[node name="Player1Health" type="ProgressBar" parent="UI/HealthBars"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 100.0

[node name="Player2Health" type="ProgressBar" parent="UI/HealthBars"]
offset_left = 1060.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 40.0
value = 100.0
